# bench-webasm

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
AssemblyScript/: index.js  tsconfig.json
AssemblyScript/src/: nbody_as.ts
FSharp/: Cargo.toml  NBody.fsproj  package.json
FSharp/.config/: dotnet-tools.json
FSharp/src/: NBody.fs  NBody.rs  lib.rs  main.fs  main.rs
Fable/: Cargo.toml  NBody.fsproj  package.json
Fable/src/: NBody.fs  Platform.fs  lib.fs  main.fs  test_wasm.js
Rust/: Cargo.toml  package.json
Rust/src/: lib.rs  main.rs  nbody.rs
assembly/: nbody_as.ts
rust/src/: lib.rs
tests/: nbody_js.ts  test.ts  tsconfig.json
