[package]
name = "fable-nbody"
version = "0.1.0"
edition = "2021"

[lib]
name = "fable_nbody"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "fable_nbody"
path = "src/main.rs"

[dependencies]
fable_library_rust = { path = "../../Fable/build/fable-library-rust" }
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 3
