[package]
name = "rust_nbody"
version = "0.1.0"
authors = ["MaxGraey <maxgraey@gmail.com>"]
edition = "2021"

[lib]
name = "rust_nbody"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rust_nbody"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
lto = true
#opt-level = 3
